--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div class= "card-body">
 							<h4 class= "card-title">Forest Fire Predicting</h4>
 							<p class= "card-text">
-								The goal of this project was to predict how forest fires spread out from speicified coordinates, with a cellular automata computer simulation, and an autonomous robot. In addition, this robot could detect small forest fires before they expanded.
+								The goal of this project was to predict how forest fires spread, with a cellular automata computer simulation, and an autonomous robot. In addition, this robot could detect small forest fires before they expanded.
 							</p>
 							<button type="button" class=" btn btn-outline-primary" onclick="window.location.href='https://github.com/Lucaman99/Forest_Fire_Engine'">View Project</button>
 						</div>
@@ -198,6 +198,7 @@
 	.project .card {
 		border:solid 1px;
 		margin-top:40px;
+		width:20vw;
 	}
 	#io {
 		background-color:lightgray;
