--- a/index.html
+++ b/index.html
@@ -43,17 +43,15 @@
 					<center>
 				<h1 id="ho">About Me</h1>
 				<br>
-				<p id="oy">I am a passionate and curious student who is always looking for opportunities in technical and scientific fields. I love to learn, and I want to become an innovator, to truly make an impact on the world around me. I think that technology is one of the best ways for me to help humanity, and I intend on using topics in engineering and emerging technology to continue to innovate and create.</p>
-				<p>I am interested in many different areas of science and technology, including robotics, computer science, physics, mathematics, and other emerging technologies. I am motivated to look at these topics in depth, as they are the future, and will lead to a better, more sustainable world.</p>
-				<p>I am very eager to take on new projects, so if you would like to connect, please do not hesitate to contact me.</p>
+				<p id="oy">I am a passionate and curious student who is always looking for opportunities in technical and scientific fields. I love to learn, and I want to become an innovator, to truly make an impact on the world around me. I think that technology is one of the best ways for me to help humanity, and I intend on using topics in engineering and emerging technology to continue to innovate and create. <br> I am interested in many different areas of science and technology, including robotics, computer science, physics, mathematics, and other emerging technologies. I am motivated to look at these topics in depth, as they are the future, and will lead to a better, more sustainable world. <br> I am very eager to take on new projects, so if you would like to connect, please do not hesitate to contact me.</p>
 			</center>
 			</div>
 			</div>
 			<div class= "col" id="oo">
 				<div class= "one">
-				<center>
+					<center>
 				<img src="build.jpg" id="bu">
-				</center>
+			</center>
 			</div>
 			</div>
 		</div>
@@ -247,14 +245,16 @@
 		color:#343a40;
 	}
 	#bu {
-		height:400px;
-		width:400px;
+		height:500px;
+		width:500px;
 	}
-	.one {
+	.col {
 		width:523px;
 	}
 	#oy {
-		float:right;
+		height:400px;
+		width:400px;
+		text-align:left;
 	}
 	</style>
 </html>
