--- a/index.html
+++ b/index.html
@@ -247,13 +247,14 @@
 	#bu {
 		height:500px;
 		width:500px;
+		margin-top:-80px;
 	}
 	.col {
 		width:523px;
 	}
 	#oy {
 		height:400px;
-		width:350px;
+		min-width:300px;
 		text-align:left;
 	}
 	</style>
