--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<center>
 				<h1 id="ho">About Me</h1>
 				<br>
-				<p id="oy">I am a passionate and curious student who is always looking for opportunities in technical and scientific fields. I love to learn, and I want to become an innovator, to truly make an impact on the world around me. I think that technology is one of the best ways for me to help humanity, and I intend on using topics in engineering and emerging technology to continue to innovate and create. <br> I am interested in many different areas of science and technology, including robotics, computer science, physics, mathematics, and other emerging technologies. I am motivated to look at these topics in depth, as they are the future, and will lead to a better, more sustainable world. <br> I am very eager to take on new projects, so if you would like to connect, please do not hesitate to contact me.</p>
+				<p id="oy">I am a passionate and curious student who is always looking for opportunities in technical and scientific fields. I love to learn, and I want to become an innovator, to truly make an impact on the world around me. I think that technology is one of the best ways for me to help humanity, and I intend on using topics in engineering and emerging technology to continue to innovate and create. <br><br> I am interested in many different areas of science and technology, including robotics, computer science, physics, mathematics, and other emerging technologies. I am motivated to look at these topics in depth, as they are the future, and will lead to a better, more sustainable world. <br><br> I am very eager to take on new projects, so if you would like to connect, please do not hesitate to contact me.</p>
 			</center>
 			</div>
 			</div>
@@ -53,10 +53,11 @@
 				<img src="build.jpg" id="bu">
 			</center>
 			</div>
+			<br><br>
 			</div>
 		</div>
 		<div class= "bars">
-			<br><br><br>
+			<br><br>
 			<center><h4>My Skills</h4></center>
 			<br>
 			<h6>Front-End Development:</h6>
@@ -191,7 +192,7 @@
 	.info .col img {
 		height:2;
 		width:2;
-		padding-top:10px;
+
 	}
 	.nav {
 		background-color:#343a40;
@@ -226,6 +227,7 @@
 	}
 	* {
 		font-family:Verdana, sans-serif;
+		overflow:none;
 	}
 	p {
 		font-size:14px;
@@ -245,16 +247,16 @@
 		color:#343a40;
 	}
 	#bu {
-		height:500px;
-		width:500px;
-		margin-top:-80px;
+		 max-width:500px;
+		 width:50vw;
+		 padding-top:20px;
 	}
 	.col {
 		width:523px;
 	}
 	#oy {
-		height:400px;
-		min-width:300px;
+		max-height:400px;
+		min-width:390px;
 		text-align:left;
 	}
 	</style>
