--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
 			</ul>
 		</div>
 		<div class= "jumbotron" id="n">
-		<div class= "container">
 			<center>
+		<div class= "container">
+			<center id="uo">
 			<button type="button" class="btn btn-dark">Jack Ceroni</button>
-			<a href="https://github.com/Lucaman99"><i class="fa fa-github" id="on" style="font-size:50px"></i></a>
-			<a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/"><i class="fa fa-linkedin-square" id="tw" style="font-size:50px"></i></a>
-			<a href="mailto:jackceroni@gmail.com" target="_top"><i class="fa fa-envelope" id="tr" style="font-size:50px"></i></a>
+			<a href="https://github.com/Lucaman99"><i class="fa fa-github" id="on" style="font-size:50px;color:#343a40;margin-left:-190px"></i></a>
+			<a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/"><i class="fa fa-linkedin-square" id="tw" style="font-size:50px;color:#343a40;margin-left:-125px"></i></a>
+			<a href="mailto:jackceroni@gmail.com" target="_top"><i class="fa fa-envelope" id="tr" style="font-size:50px;color:#343a40"></i></a>
 		</center>
 		</div>
+	</center>
 		</div>
 		<h1 id="o"></h1>
 		<div class= "info" id="in">
@@ -164,23 +166,24 @@
 		font-size:30px;
 		margin-top:30px;
 		cursor:default;
+		margin-top:-1px;
 	}
 	#on {
 		color:black;
 		position:absolute;
-		margin-top:110px;
+		margin-top:70px;
 		margin-left:-180px;
 	}
 	#tw {
 		color:black;
 		position:absolute;
-		margin-top:110px;
+		margin-top:70px;
 		margin-left:-120px;
 	}
 	#tr {
 		color:black;
 		position:absolute;
-		margin-top:110px;
+		margin-top:70px;
 		margin-left:-60px;
 	}
 	.info .col h1{
@@ -192,7 +195,6 @@
 	.info .col img {
 		height:2;
 		width:2;
-
 	}
 	.nav {
 		background-color:#343a40;
@@ -240,7 +242,6 @@
 	.contact p {
 		color:white;
 		padding-top:10px;
-
 	}
 	i {
 		cursor:pointer;
@@ -258,6 +259,14 @@
 		max-height:400px;
 		min-width:360px;
 		text-align:left;
+	}
+	#uo {
+		background-color:white;
+		width:199px;
+		height:130px;
+		border-radius:5px;
+		margin-top:34vh;
+
 	}
 	</style>
 </html>
