--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 		<div class= "container">
 			<center id="uo">
 			<button type="button" class="btn btn-dark">Jack Ceroni</button>
-			<a href="https://github.com/Lucaman99"><i class="fa fa-github" id="on" style="font-size:50px;color:#343a40;margin-left:-190px"></i></a>
-			<a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/"><i class="fa fa-linkedin-square" id="tw" style="font-size:50px;color:#343a40;margin-left:-125px"></i></a>
-			<a href="mailto:jackceroni@gmail.com" target="_top"><i class="fa fa-envelope" id="tr" style="font-size:50px;color:#343a40"></i></a>
+			<center>
+			<a href="https://github.com/Lucaman99"><i class="fa fa-github" id="on" style="font-size:50px;color:#343a40;margin-left:-90px;margin-top:10px"></i></a>
+			<a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/"><i class="fa fa-linkedin-square" id="tw" style="font-size:50px;color:#343a40;margin-left:-30px;margin-top:10px"></i></a>
+			<a href="mailto:jackceroni@gmail.com" target="_top"><i class="fa fa-envelope" id="tr" style="font-size:50px;color:#343a40;margin-left:40px;margin-top:10px"></i></a>
+		</center>
 		</center>
 		</div>
 	</center>
@@ -172,19 +174,16 @@
 		color:black;
 		position:absolute;
 		margin-top:70px;
-		margin-left:-180px;
 	}
 	#tw {
 		color:black;
 		position:absolute;
 		margin-top:70px;
-		margin-left:-120px;
 	}
 	#tr {
 		color:black;
 		position:absolute;
 		margin-top:70px;
-		margin-left:-60px;
 	}
 	.info .col h1{
 		text-align:center;
