--- a/ignite.html
+++ b/ignite.html
@@ -36,7 +36,7 @@
     <center id="op">
       <h1>Engineering nature.</h1>
       <p>We create new technology with the goal of combating one of the most dangerous natural occurences in the world today: forest fires.</p>
-      <img src="b.jpg" id="ou">
+      <img src="https://s1.twnmm.com/thumb?src=//s1.twnmm.com/images/en_ca/12/Fire-Forest-32452.jpg&w=690&h=388&scale=1&crop=1" id="ou">
     </center>
   </div>
   <br><br><br><br><br><br><br><br>
