--- a/ignite.html
+++ b/ignite.html
@@ -58,6 +58,10 @@
   .nav {
     color:black;
     font-family:Arial;
+    width:100vw;
+    padding-top:5px;
+    padding-bottom:5px;
+    background-color:gray;
   }
   #oi {
     font-size:20px;
