--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		padding-bottom:40px;
 	}
 	.project .card {
-		border:solid 1px;
+		box-shadow: 0px 0px 15px 5px rgba(30, 31, 33, 0.15);
 		margin-top:40px;
 		width:313px;
 		height:550px;
