--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		text-align:center;
 	}
 	#ho {
-		
+
 	}
 	.info .col img {
 		height:2;
@@ -207,7 +207,7 @@
 	.nav a {
 		color:white;
 	}
-	.total { 
+	.total {
 		background-image: url("bg.jpg")
 	}
 	.project .row {
@@ -261,10 +261,11 @@
 	}
 	#uo {
 		background-color:white;
-		width:199px;
+		width:198.5px;
 		height:130px;
 		border-radius:5px;
 		margin-top:34vh;
+    box-shadow: 0px 0px 15px 5px rgba(30, 31, 33, 0.15);
 
 	}
 	</style>
