--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 		 max-width:500px;
 		 width:50vw;
 		 padding-top:20px;
+     box-shadow: 0px 0px 15px 5px rgba(30, 31, 33, 0.15);
 	}
 	.col {
 		width:523px;
