--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 		background-repeat:no-repeat;
 		height:100vh;
 		cursor:default;
+		background-size:cover;
+		background-image:url('back.jpg')
 	}
 	.jumbotron button {
 		font-size:30px;
@@ -186,7 +188,7 @@
     50% {background-position: 100% 50%}
     100% {background-position: 0% 50%}
   }
-  .jumbotron {
+  .jumbotrona {
     z-index:5;
     width: 100wh;
     height: 100vh;
@@ -257,4 +259,5 @@
 		margin-top:34vh;
     box-shadow: 0px 0px 15px 5px rgba(30, 31, 33, 0.15);
 	}
+
 	</style>
