--- a/cirq.html
+++ b/cirq.html
@@ -17,7 +17,7 @@
 			<center>
 		<div class= "container">
 			<center style="color:white;margin-top:300px;width:750px;background-color:#343a40;padding-top:7px;padding-bottom:3px;border-radius:20px;">
-			<h1 style="font-family:Calibri;font-weight:bold">Simulating Quantum Algorithms With Cirq</h1>
+			<h1 style="font-family:Arial;font-weight:bold;font-size:35px;">Simulating Quantum Algorithms With Cirq</h1>
 		</center>
 		</div>
 	</center>
@@ -26,7 +26,7 @@
 			<div class= "row">
 				<div class= "col">
 					<div style="margin-left:40px;margin-top:65px;">
-			<h5 style="font-family:Calibri;">Simulating Deutsch's Algorithm With 3 Qubits on the Cirq Platform</h5>
+			<h5 style="font-family:Arial;">Simulating Deutsch's Algorithm With 3 Qubits on the Cirq Platform</h5>
 			<p>The goal of this project was to create a working simulation of Deutsch's Algorithm, using the Google Cirq quantum computing platform.
 				I was able to successfully utilize qubits to create different combinations of quantum logic gates, in order to receive the results predicted
 				by the mathematical formulation of Deutsch's Algorithm.</p>
