--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <body>
         <div class= "container">
           <div class= "row">
-            <div class= "col-sm-5" style="height:825px;width:550px;background-image:url('pic.jpg');background-size:100% 100%;left:0px;position:absolute;">
+            <div class= "col-sm-5" style="height:100vh;width:550px;background-image:url('pic.jpg');background-size:100% 100%;left:0px;position:absolute;">
               <h1 style="color:white;margin-top:320px;margin-left:145px">Jack Ceroni</h1>
               <h5 style="font-size:15px;margin-left:85px;color:white;margin-top:20px;">Mathematics | Physics | Quantum Computing</h5>
               <h5 style="font-size:15px;margin-left:185px;color:white;margin-top:20px;font-weight:bold;">Toronto, Canada</h5>
