--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class= "col-sm-9">
                   <br>
-			<p style="font-size:13px;word-spacing:4px">I am a <b>high</b> school student from the Greater Toronto Area with a great interest in mathematics, physics, and quantum computing.
+			<p style="font-size:13px;word-spacing:4px">I am a high school student from the Greater Toronto Area with a great interest in mathematics, physics, and quantum computing.
                   I love working on projects that leverage the beauty and abstraction within pure mathematics, and physics, as I believe that these diciplines are where
                   true artistry and creative thought lie. I also like to use these fields to solve large, important problems in the world. I am always looking for new
                 projects that involve my interests, so please feel free to reach out!</p>
