--- a/qm/1/7.html
+++ b/qm/1/7.html
@@ -19,7 +19,7 @@ $$\frac{\text{d}\langle p \rangle}{\text{d}t} \ = \ \Big\langle -\frac{\partial 
 <br>
 We can start by remembering how $\langle p \rangle$ is expressed in the language of operators, and then tack a time derivative on it:
 <br><br>
-$$\frac{\text{d}\langle p \rangle}{\text{d}t} = \ \frac{\text{d}}{\text{dx}}\displaystyle\int_{-\infty}^{\infty} \ \Psi^{*} \Big(\frac{\hbar}{i} \
+$$\frac{\text{d}\langle p \rangle}{\text{d}t} = \ \frac{\text{d}}{\text{dt}}\displaystyle\int_{-\infty}^{\infty} \ \Psi^{*} \Big(\frac{\hbar}{i} \
 \frac{\partial}{\partial x}\Big) \Psi \ \text{dx} \ = \ \displaystyle\int_{-\infty}^{\infty} \ \frac{\partial}{\partial t} \ \Psi^{*} \Big(\frac{\hbar}{i} \
 \frac{\partial}{\partial x}\Big) \Psi \ \text{dx} \ = \ \frac{\hbar}{i} \ \displaystyle\int_{-\infty}^{\infty} \ \frac{\partial}{\partial t} \ \Big(\Psi^{*}
 \frac{\partial \Psi}{\partial x}\Big) \ \text{dx}$$
