--- a/qm/index.html
+++ b/qm/index.html
@@ -16,7 +16,7 @@
     <br><br>
 <h2>Griffiths Quantum Mechanics 2nd Edition: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
-<p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a></p>
+<p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a>, <a href="https://lucaman99.github.io/qm/1/11.html">Problem 1.11</a></p>
 </div>
 </center>
 </body>
