--- a/qm/index.html
+++ b/qm/index.html
@@ -16,6 +16,7 @@
     <br><br>
 <h2>Griffiths Quantum Mechanics 2nd Edition: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
+<p>This is the first time I have ever attempted to make a formal physics solution set, so for my <b>Chapter 1</b> solutions, I checked some of them against the solutions at this link: https://physicspages.com/Griffiths%20QM.html. Despite this, all solutions written here were personally constructed, I only used this website to make sure that my solutions were not incorrect.</p>
 <p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a>, <a href="https://lucaman99.github.io/qm/1/11.html">Problem 1.11</a></p>
 </div>
 </center>
